add lombok. fixes.